SET(PROJECT_NAME "testKernel")
SET(TARGET_NAME "testKernel")

#include
INCLUDE_DIRECTORIES(${PROJECT_INCLUDE_DIR})
AUX_SOURCE_DIRECTORY(. SRC_LIST)

file(GLOB PUBLISH "${PROJECT_INCLUDE_DIR}/*.h")
source_group("publish" FILES ${PUBLISH})

SET(ALL_SRC_LIST
${PUBLISH}
${SRC_LIST}
"CMakeLists.txt"
)

ADD_EXECUTABLE(${TARGET_NAME} ${ALL_SRC_LIST})

TARGET_LINK_LIBRARIES(${TARGET_NAME} testCommon)

#SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIER RUNTIME_OUTPUT_DIRECTORY "${bin}")
#SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIER ARCHIVE_OUTPUT_DIRECTORY "${bin}")
#SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIER OUTPUT_NAME ${TARGET_NAME})
#SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIER FOLDER "kernel")
